refactor: Thread name.